ImportError: cannot import name '_validate_lengths'

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-numpy
-scipy
-cython
-h5py
-Pillow
-scikit-image
+numpy==1.14.5
+scipy==1.1.0
+cython==0.28.3
+h5py==2.8.0
+Pillow==5.2.0
+scikit-image==0.14.0
 tensorflow-gpu==1.8
 keras==2.1.6
-jupyter
-matplotlib
-imgaug
+jupyter==1.0.0
+matplotlib==2.2.2
+imgaug==0.2.6
 IPython[all]
 opencv-python==3.4.1.15
